2005-03-04  Mike Kestner  <mkestner@novell.com>

	* generator/Method.cs : refactor out some retval logic.
	* generator/ReturnValue.cs : add FromNative and IsVoid members.

2005-03-03  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : remove unnecessary null_ok rules.
	* generator/Ctor.cs : don't add null params to CreateNativeObject call
	for InterfaceGen or OpaqueGen in addition to ObjectGen.
	* generator/Field.cs : simplify Object/Opaque gen.
	* generator/Method.cs : remove OpaqueGen special casing.
	* generator/OpaqueGen.cs : make FromNative null_ok robust.
	* generator/Signal.cs : remove arg marshaling ClassBase special case.
	* gtk/Gtk.metadata : remove unnecessary null_ok rules.

2005-03-03  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs : use "as" instead of a cast in FromNative.
	* generator/Method.cs : remove the if/else checks for Object retvals.
	* glib/Object.cs : return null immediately for NULL in GetObject.

2005-03-03  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs : add null checking to CallByName. No sense
	manually adding this for the ones that need it. Better to have g_criticals
	then NullRefExceptions anyway.
	* generator/MethodBody.cs : simplify out handle generation.
	[A babystep toward #86620]

2005-02-28  Dan Winship  <danw@novell.com>

	* gtk/Container.custom (ChildType): fix this to just call
	gtk_container_child_type().

	* gtk/glue/container.c (gtksharp_container_base_child_type): kill

2005-02-28  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs : add locking on the source_handlers.
	* glib/Source.cs : add locking on the source_handlers.
	* glib/Timeout.cs : add locking on the source_handlers.

2005-02-25  Mike Kestner  <mkestner@novell.com>

	* glib/Source.cs : remove from the hash by key.
	* glib/Idle.cs : remove from the hash by key.

2005-02-23  Dan Winship  <danw@novell.com>

	* sources/gnomedb.patch: Patch over a bug in gnome-db-editor.h

	* gnomedb/gnomedb-api.raw: Regen
