@@ -1,5 +1,17 @@
 2005-03-04  Mike Kestner  <mkestner@novell.com>
 
+	* generator/ImportSignature.cs : out param handling fix.
+	* generator/Makefile.am : kill StringGen.cs.
+	* generator/MethodBody.cs : simplify out param handling.
+	* generator/StringGen.cs : kill it, now using MarshalGen.
+	* generator/SymbolTable.cs : make non-const strings use an appropriate
+	MarshalGen.  Non-const strings are now correctly marshaled as Utf8.
+	* glib/Marshaller.cs : add some utf8-fu for strdup/free marshaling.
+	Add a method to alloc/copy structs to native memory, unused yet.
+	* gtk/Gtk.metadata : partially fix a broken delegate.
+
+2005-03-04  Mike Kestner  <mkestner@novell.com>
+
 	* generator/Method.cs : refactor out some retval logic.
 	* generator/ReturnValue.cs : add FromNative and IsVoid members.
 
